// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> layout it renders Button on touch devices 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  />
</button>
`;

exports[`<Button /> layout it renders children 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  >
    <div
      className="mfui-beta-button__content content-class"
    >
      button
    </div>
  </div>
</a>
`;

exports[`<Button /> layout it renders spinner 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_loading mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <div
      className="mfui-beta-button__spinner"
    >
      <test-file-stub />
    </div>
  </div>
</button>
`;

exports[`<Button /> layout renders Button with default props 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  />
</button>
`;

exports[`<Button /> layout renders Button with props 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render full width button 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_full-width mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag a with disabled state 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_disabled mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  disabled={false}
  href="test"
  onClick={[Function]}
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag button with disabled state 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_disabled mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  />
</button>
`;

exports[`<Button /> layout should render with arrow 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <div
      className="mfui-beta-button__content"
    >
      arrow
      <test-file-stub
        className="mfui-beta-button__icon-arrow"
      />
    </div>
  </div>
</button>
`;

exports[`<Button /> layout should render with different width for resolutions 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_size-wide_large mfui-beta-button_size-desktop_medium mfui-beta-button_size-tablet_medium mfui-beta-button_size-mobile_small mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render with left icon 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <div
      className="mfui-beta-button__content"
    >
      <div
        className="mfui-beta-button__icon"
      >
        <test-file-stub />
      </div>
      left icon
    </div>
  </div>
</button>
`;
